[package]
name = "wcore-honcho-adapter"
description = "Adapter bridging wcore-user-model::UserModelBackend to genesis-honcho::HonchoClient"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace      = true
serde.workspace            = true
serde_json.workspace       = true
thiserror.workspace        = true
tokio.workspace            = true
tracing.workspace          = true

wcore-user-model.workspace = true
genesis-honcho.workspace   = true

workspace-hack.workspace   = true

[dev-dependencies]
tokio.workspace            = true
